SERVER-20819 Coverity analysis defect 76290: Unchecked return value